correcting  the last 16 notebooks

--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-flair-fewshot.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-flair-fewshot.ipynb
@@ -14,7 +14,7 @@
    "id": "f188f15e-7922-4aee-b4a3-ff003d49dc86",
    "metadata": {},
    "source": [
-    "In this tutorial you will learn how to analyze and validate NER predictions from the new zero-shot model provided by the Flair NLP library with Argilla.\n",
+    "In this tutorial, you will learn how to analyze and validate NER predictions from the new zero-shot model provided by the Flair NLP library with Argilla.\n",
     "\n",
     "- 🛠 Useful for quickly bootstrapping a training set (using Argilla [*Annotation Mode*](../../reference/webapp/features.html#annotate)) as well as integrating with weak-supervision workflows.\n",
     "- 👁 We will use a challenging, exciting dataset: wnut_17 (more info below).\n",
@@ -69,7 +69,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -133,9 +133,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -169,7 +171,7 @@
    "source": [
     "## 1. Load the `wnut_17` dataset\n",
     "\n",
-    "In this example, we'll use a challenging NER dataset, the **\"WNUT 17: Emerging and Rare entity recognition\"** , which focuses on unusual, previously-unseen entities in the context of emerging discussions. This dataset is useful for getting a sense of the quality of our zero-shot predictions.\n",
+    "In this example, we'll use a challenging NER dataset, the **\"WNUT 17: Emerging and Rare entity recognition\"** , which focuses on unusual, previously unseen entities in the context of emerging discussions. This dataset is useful for getting a sense of the quality of our zero-shot predictions.\n",
     "\n",
     "Let's load the test set from the [Hugging Face Hub](https://huggingface.co/datasets/wnut_17):"
    ]
@@ -181,10 +183,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download data set\n",
+    "# Download data set\n",
     "dataset = load_dataset(\"wnut_17\", split=\"test\")\n",
     "\n",
-    "# define labels\n",
+    "# Define labels\n",
     "labels = [\"corporation\", \"creative-work\", \"group\", \"location\", \"person\", \"product\"]"
    ]
   },
@@ -205,10 +207,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load zero-shot NER tagger\n",
+    "# Load zero-shot NER tagger\n",
     "tars = TARSTagger.load(\"tars-ner\")\n",
     "\n",
-    "# define labels for named entities using wnut labels\n",
+    "# Define labels for named entities using wnut labels\n",
     "tars.add_and_switch_to_new_task(\"task 1\", labels, label_type=\"ner\")"
    ]
   },
@@ -228,13 +230,13 @@
    "outputs": [],
    "source": [
     "\n",
-    "# wrap our tokens in a flair Sentence\n",
+    "# Wrap our tokens in a flair Sentence\n",
     "sentence = Sentence(\" \".join(dataset[0][\"tokens\"]))\n",
     "\n",
-    "# add predictions to our sentence\n",
+    "# Add predictions to our sentence\n",
     "tars.predict(sentence)\n",
     "\n",
-    "# extract predicted entities into a list of tuples (entity, start_char, end_char)\n",
+    "# Extract predicted entities into a list of tuples (entity, start_char, end_char)\n",
     "[\n",
     "    (entity.get_labels()[0].value, entity.start_position, entity.end_position)\n",
     "    for entity in sentence.get_spans(\"ner\")\n",
@@ -258,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# build records for the first 100 examples\n",
+    "# Build records for the first 100 examples\n",
     "records = []\n",
     "\n",
     "for record in dataset.select(range(100)):\n",
@@ -271,7 +273,7 @@
     "        for entity in sentence.get_spans(\"ner\")\n",
     "    ]\n",
     "\n",
-    "    # building TokenClassificationRecord\n",
+    "    # Building TokenClassificationRecord\n",
     "    records.append(\n",
     "        rg.TokenClassificationRecord(\n",
     "            text=input_text,\n",
@@ -281,7 +283,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "# log the records to Argilla\n",
+    "# Log the records to Argilla\n",
     "rg.log(records, name=\"tars_ner_wnut_17\", metadata={\"split\": \"test\"})"
    ]
   },
@@ -301,7 +303,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Getting predictions with a zero-shot approach can be very helpful to guide humans in their annotation process.\n",
+    "Getting predictions with a zero-shot approach can be very helpful in guiding humans in their annotation process.\n",
     "Especially for NER tasks, Argilla makes it very easy to explore and correct those predictions thanks to its **Hand-labeling Mode** 😎."
    ]
   }
