--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-spacy-pretrained.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-spacy-pretrained.ipynb
@@ -28,11 +28,11 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In this tutorial we will learn how to explore and analyze spaCy NER pipelines in an easy way.\n",
+    "In this tutorial, we will learn how to explore and analyze spaCy NER pipelines in an easy way.\n",
     "\n",
-    "We will load the [*Gutenberg Time*](https://huggingface.co/datasets/gutenberg_time) dataset from the Hugging Face Hub and use a transformer-based spaCy model for detecting entities in this dataset and log the detected entities into a Argilla dataset. This dataset can be used for exploring the quality of predictions and for creating a new training set, by correcting, adding and validating entities.\n",
+    "We will load the [*Gutenberg Time*](https://huggingface.co/datasets/gutenberg_time) dataset from the Hugging Face Hub and use a transformer-based spaCy model for detecting entities in this dataset and log the detected entities into an Argilla dataset. This dataset can be used for exploring the quality of predictions and for creating a new training set, by correcting, adding and validating entities.\n",
     "\n",
-    "Then, we will use a smaller spaCy model for detecting entities and log the detected entities into the same Argilla dataset for comparing its predictions with the previous model. And, as a bonus, we will use Argilla and spaCy on a more challenging dataset: IMDB."
+    "Then, we will use a smaller spaCy model for detecting entities and log the detected entities into the same Argilla dataset to compare its predictions with the previous model. And, as a bonus, we will use Argilla and spaCy on a more challenging dataset: IMDB."
    ]
   },
   {
@@ -63,7 +63,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -113,9 +113,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -357,7 +359,7 @@
     "You can:\n",
     "\n",
     "- Filter records containing specific entity types,\n",
-    "- See the most frequent \"mentions\" or surface forms for each entity. Mentions are the string values of specific entity types, such as for example \"1 month\" can be the mention of a duration entity. This is useful for error analysis, to quickly see potential issues and problematic entity types,\n",
+    "- See the most frequent \"mentions\" or surface forms for each entity. Mentions are the string values of specific entity types, for example, \"1 month\" can be the mention of a duration entity. This is useful for error analysis, to quickly see potential issues and problematic entity types,\n",
     "- Use the free-text search to find records containing specific words, \n",
     "- And validate, include or reject specific entity annotations to build a new training set.\n",
     "\n",
@@ -429,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, both **spaCy pretrained models** seem to work pretty well. Let's try with a more challenging dataset, which is more dissimilar to the original training data these models have been trained on. "
+    "So far, both **spaCy pre-trained models** seem to work pretty well. Let's try with a more challenging dataset, which is more dissimilar to the original training data these models have been trained on. "
    ]
   },
   {
@@ -473,9 +475,9 @@
    "source": [
     "Exploring this dataset highlights **the need of fine-tuning for specific domains**.\n",
     "\n",
-    "For example, if we check the most frequent mentions for Person, we find two highly frequent missclassified entities: **gore** (the film genre) and **Oscar** (the prize). \n",
+    "For example, if we check the most frequent mentions for Person, we find two highly frequent misclassified entities: **gore** (the film genre) and **Oscar** (the prize). \n",
     "\n",
-    "You can easily check every example by using the filters and search-box."
+    "You can easily check every example by using the filters and search box."
    ]
   },
   {
@@ -495,8 +497,8 @@
    "source": [
     "## Appendix: Log datasets to the Hugging Face Hub\n",
     "\n",
-    "Here we will show you an example of how you can push a Argilla dataset (records) to the [Hugging Face Hub](https://huggingface.co/datasets).\n",
-    "In this way you can effectively version any of your Argilla datasets."
+    "Here we will show you an example of how you can push an Argilla dataset (records) to the [Hugging Face Hub](https://huggingface.co/datasets).\n",
+    "In this way, you can effectively version any of your Argilla datasets."
    ]
   },
   {
