--- a/docs/_source/tutorials/notebooks/monitoring-textclassification-transformers-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/monitoring-textclassification-transformers-explainability.ipynb
@@ -37,7 +37,7 @@
     "<script async src=\"//platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>\n",
     "\n",
     "\n",
-    "The technique is really simple: if you are training a model with a training set, train your model, and you apply your model to the training set to **compute the loss for each example in the training set**. If you sort your dataset examples by loss, examples with the highest loss are the most ambiguous and difficult to learn. \n",
+    "The technique is really simple: if you are training a model with a training set, train your model, and apply your model to the training set to **compute the loss for each example in the training set**. If you sort your dataset examples by loss, examples with the highest loss are the most ambiguous and difficult to learn. \n",
     "\n",
     "This technique can be used for **error analysis during model development** (e.g., identifying tokenization problems), but it turns out is also a really simple technique for **cleaning up your training data, during model development or after training data collection activities**. \n",
     " \n",
@@ -45,13 +45,13 @@
     "\n",
     "### Why it's important\n",
     "\n",
-    "1. **Machine learning models are only as good as the data they're trained on**. Almost all training data source can be considered *\"noisy\"* (e.g., crowd-workers, annotator errors, weak supervision sources, data augmentation, etc.)\n",
+    "1. **Machine learning models are only as good as the data they're trained on**. Almost all training data sources can be considered *\"noisy\"* (e.g., crowd-workers, annotator errors, weak supervision sources, data augmentation, etc.)\n",
     "\n",
     "2. With this simple technique **we're able to find more than 50 label errors on a widely-used benchmark in less than 5 minutes** (your dataset will probably be noisier!).\n",
     "\n",
-    "3. With advanced model architectures widely-available, **managing, cleaning, and curating data is becoming a key step for making robust ML applications**. A good summary of the current situation can be found in the website of the [Data-centric AI NeurIPS Workshop](http://datacentricai.org/).\n",
+    "3. With advanced model architectures widely available, **managing, cleaning, and curating data is becoming a key step for making robust ML applications**. A good summary of the current situation can be found on the website of the [Data-centric AI NeurIPS Workshop](http://datacentricai.org/).\n",
     "\n",
-    "4. This simple trick **can be used across the whole ML lifecycle** and not only for finding label errors. With this trick you can improve data preprocessing, tokenization, and even your model architecture."
+    "4. This simple trick **can be used across the whole ML lifecycle** and not only for finding label errors. With this trick, you can improve data preprocessing, tokenization, and even your model architecture."
    ]
   },
   {
@@ -83,7 +83,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -134,9 +134,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -172,7 +174,7 @@
     "\n",
     "1. A model fine-tuned with the AG News dataset (you could train your own model if you wish).\n",
     "2. The AG News train split (the same trick could and should be applied to validation and test splits).\n",
-    "3. Argilla for logging, exploring, and relabeling wrong examples (we provide a pre-computed datasets so feel free to skip to this step)"
+    "3. Argilla for logging, exploring, and relabeling wrong examples (we provide pre-computed datasets so feel free to skip to this step)"
    ]
   },
   {
@@ -197,17 +199,17 @@
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# load model and tokenizer\n",
+    "# Load model and tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"andi611/distilbert-base-uncased-ner-agnews\")\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\n",
     "    \"andi611/distilbert-base-uncased-ner-agnews\"\n",
     ")\n",
     "model.to(device)\n",
     "\n",
-    "# load the training split\n",
+    "# Load the training split\n",
     "ds = load_dataset(\"ag_news\", split=\"train\")\n",
     "\n",
-    "# tokenize and encode the training set\n",
+    "# Tokenize and encode the training set\n",
     "def tokenize_and_encode(batch):\n",
     "    return tokenizer(batch[\"text\"], truncation=True)\n",
     "\n",
@@ -241,10 +243,10 @@
    },
    "outputs": [],
    "source": [
-    "# create the data collator for inference\n",
+    "# Create the data collator for inference\n",
     "data_collator = DataCollatorWithPadding(tokenizer, padding=True)\n",
     "\n",
-    "# function to compute the loss example-wise\n",
+    "# Function to compute the loss example-wise\n",
     "def loss_per_example(batch):\n",
     "    batch = data_collator(batch)\n",
     "    input_ids = torch.tensor(batch[\"input_ids\"], device=device)\n",
@@ -257,11 +259,11 @@
     "        # compute the probabilities for logging them into Argilla\n",
     "        batch[\"predicted_probas\"] = torch.nn.functional.softmax(output.logits, dim=0)\n",
     "\n",
-    "    # don't reduce the loss (return the loss for each example)\n",
+    "    # Don't reduce the loss (return the loss for each example)\n",
     "    loss = torch.nn.functional.cross_entropy(output.logits, labels, reduction=\"none\")\n",
     "    batch[\"loss\"] = loss\n",
     "\n",
-    "    # datasets complains with numpy dtypes, let's use Python lists\n",
+    "    # Datasets complains with numpy dtypes, let's use Python lists\n",
     "    for k, v in batch.items():\n",
     "        batch[k] = v.cpu().numpy().tolist()\n",
     "\n",
@@ -280,7 +282,7 @@
     "\n",
     "Warning\n",
     "\n",
-    "Computing model this information is computationally intensive and might be slow if you don't have a GPU. Even if you have a GPU, it could take around 5 minutes to compute this information for the full dataset. Try reducing the number of records in the dataset during `load_dataset` or using `.select(range(number_of_record))`.\n",
+    "Computing a model for this information is computationally intensive and might be slow if you don't have a GPU. Even if you have a GPU, it could take around 5 minutes to compute this information for the full dataset. Try reducing the number of records in the dataset during `load_dataset` or using `.select(range(number_of_record))`.\n",
     "\n",
     "</div>"
    ]
@@ -437,13 +439,13 @@
     "    loss_per_example, batched=True, batch_size=32\n",
     ")\n",
     "\n",
-    "# turn the dataset into a Pandas dataframe, sort by descending loss and visualize the top examples.\n",
+    "# Turn the dataset into a Pandas dataframe, sort by descending loss and visualize the top examples.\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
     "\n",
     "losses_ds.set_format(\"pandas\")\n",
     "losses_df = losses_ds[:][[\"label\", \"predicted_label\", \"loss\", \"predicted_probas\"]]\n",
     "\n",
-    "# add the text column removed by the trainer\n",
+    "# Add the text column removed by the trainer\n",
     "losses_df[\"text\"] = ds_enc[\"text\"]\n",
     "losses_df.sort_values(\"loss\", ascending=False).head(10)\n"
    ]
@@ -455,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save this to a file for further analysis\n",
+    "# Save this to a file for further analysis\n",
     "# losses_df.to_json(\"agnews_train_loss.json\", orient=\"records\", lines=True)"
    ]
   },
@@ -464,7 +466,7 @@
    "id": "190ee1cd-fc2f-4db0-bf3e-5d45f63fb47a",
    "metadata": {},
    "source": [
-    "While using Pandas and Jupyter notebooks is useful for initial inspection, and programmatic analysis. If you want to quickly explore the examples, relabel them, and share them with other project members, Argilla provides you with a straight-forward way for doing this. Let's see how."
+    "While using Pandas and Jupyter notebooks is useful for initial inspection, and programmatic analysis. If you want to quickly explore the examples, relabel them, and share them with other project members, Argilla provides you with a straightforward way to do this. Let's see how."
    ]
   },
   {
@@ -474,7 +476,7 @@
     "id": "PBptxhjWCJ5n"
    },
    "source": [
-    "## 3. Log high loss examples into Argilla\n",
+    "## 3. Log high-loss examples into Argilla\n",
     "\n",
     "Using the amazing Hugging Face Hub we've shared the resulting dataset, which you can find [here](https://huggingface.co/argilla) and load directly using the datasets library\n",
     "\n",
@@ -488,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if you have skipped the first two steps you can load the dataset here:\n",
+    "# If you have skipped the first two steps you can load the dataset here:\n",
     "dataset = load_dataset(\"dvilasuero/ag_news_training_set_losses\", split=\"train\")\n",
     "losses_df = dataset.to_pandas()\n",
     "\n",
@@ -502,31 +504,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creates a Text classification record for logging into Argilla\n",
+    "# Create a Text classification record for logging into Argilla\n",
     "def make_record(row):\n",
     "    return rg.TextClassificationRecord(\n",
     "        text=row.text,\n",
-    "        # this is the \"gold\" label in the original dataset\n",
+    "        # This is the \"gold\" label in the original dataset\n",
     "        annotation=[(ds.features[\"label\"].names[row.label])],\n",
-    "        # this is the prediction together with its probability\n",
+    "        # This is the prediction together with its probability\n",
     "        prediction=[\n",
     "            (\n",
     "                ds.features[\"label\"].names[row.predicted_label],\n",
     "                row.predicted_probas[row.predicted_label],\n",
     "            )\n",
     "        ],\n",
-    "        # metadata fields can be used for sorting and filtering, here we log the loss\n",
+    "        # Metadata fields can be used for sorting and filtering, here we log the loss\n",
     "        metadata={\"loss\": row.loss},\n",
-    "        # who makes the prediction\n",
+    "        # Who makes the prediction\n",
     "        prediction_agent=\"andi611/distilbert-base-uncased-ner-agnews\",\n",
-    "        # source of the gold label\n",
+    "        # Source of the gold label\n",
     "        annotation_agent=\"ag_news_benchmark\",\n",
     "    )\n",
     "\n",
-    "# if you want to log the full dataset remove the indexing\n",
+    "# If you want to log the full dataset remove the indexing\n",
     "top_losses = losses_df.sort_values(\"loss\", ascending=False)[0:499]\n",
     "\n",
-    "# build Argilla records\n",
+    "# Build Argilla records\n",
     "records = top_losses.apply(make_record, axis=1)\n",
     "\n",
     "rg.log(records, name=\"ag_news_error_analysis\")"
@@ -540,7 +542,7 @@
    "source": [
     "## 4. Using Argilla UI for inspection and relabeling\n",
     "\n",
-    "In this step, we have a Argilla Dataset available for exploration and annotation. A useful feature for this use case is **Sorting**. With Argilla you can sort your examples by combining different fields, both from the standard fields (such as `score`) and custom fields (via the metadata fields). In this case, we've logged the loss so we can order our training examples by loss in descending order (showing higher loss examples first).\n",
+    "In this step, we have an Argilla Dataset available for exploration and annotation. A useful feature for this use case is **Sorting**. With Argilla you can sort your examples by combining different fields, both from the standard fields (such as `score`) and custom fields (via the metadata fields). In this case, we've logged the loss so we can order our training examples by loss in descending order (showing higher loss examples first).\n",
     "\n",
     "For preparing this tutorial, we have manually checked and relabelled the first 50 examples. Moreover, we've shared this re-annotated dataset in the Hugging Face Hub. In the next section, we show you how easy is to share Argilla Datasets in the Hub."
    ]
@@ -740,7 +742,7 @@
    "source": [
     "dataset = rg.load(\"ag_news_error_analysis\", query=\"annotated_by:argilla\").to_pandas()\n",
     "\n",
-    "# let's do some transformations before uploading the dataset\n",
+    "# Let's do some transformations before uploading the dataset\n",
     "dataset[\"loss\"] = dataset.metadata.transform(lambda r: r[\"loss\"])\n",
     "dataset = dataset.rename(columns={\"annotation\": \"corrected_label\"})\n",
     "\n",
@@ -754,8 +756,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# let's add the original dataset labels to share them together with the corrected ones\n",
-    "# we sort by ascending loss our corrected dataset\n",
+    "# Let's add the original dataset labels to share them together with the corrected ones\n",
+    "# We sort by ascending loss our corrected dataset\n",
     "dataset = dataset.sort_values(\"loss\", ascending=False)\n",
     "\n",
     "# we add original labels in string form\n",
