--- a/docs/_source/tutorials/notebooks/training-textclassification-modal-activelearning.ipynb
+++ b/docs/_source/tutorials/notebooks/training-textclassification-modal-activelearning.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "In this tutorial **our goal is to show you how to incorporate Argilla into an active learning workflow involving a human in the loop**.\n",
     "We will build a simple text classifier by combining **scikit-learn**, the active learning framework **ModAL** and **Argilla**. \n",
-    "Scikit-learn will provide the model that we will embed in an active learner from ModAL, and you and *Argilla* will serve as the information source that teach the model to become a sample efficient classifier.\n",
+    "Scikit-learn will provide the model that we will embed in an active learner from ModAL, and you and *Argilla* will serve as the information source that teaches the model to become a sample efficient classifier.\n",
     "\n",
     "This tutorial is only a proof of concept for educational purposes and to inspire you with some ideas involving interactive learning processes, and how they can help to quickly build a training data set from scratch. "
    ]
@@ -63,7 +63,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install modAL scikit-learn matplotlib -qqq  # matplotlib is optional"
+    "%pip install argilla modAL scikit-learn matplotlib -qqq  # matplotlib is optional"
    ]
   },
   {
@@ -114,9 +114,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -465,7 +467,7 @@
    "id": "6e251118-6e38-496a-9c4d-d49f9fa67995",
    "metadata": {},
    "source": [
-    "Now we can start our active learning loop that consists of iterating over following MLOps Steps:\n",
+    "Now we can start our active learning loop that consists of iterating over the following MLOps Steps:\n",
     "\n",
     "1. Annotate samples\n",
     "2. Teach the active learner\n",
@@ -510,10 +512,10 @@
    "outputs": [],
    "source": [
     "\n",
-    "# query examples from our training pool with the most uncertain prediction\n",
+    "# Query examples from our training pool with the most uncertain prediction\n",
     "query_idx, query_inst = learner.query(X_train, n_instances=n_instances)\n",
     "\n",
-    "# get predictions for the queried examples\n",
+    "# Get predictions for the queried examples\n",
     "try:\n",
     "    probabilities = learner.predict_proba(X_train[query_idx])\n",
     "# For the very first query we do not have any predictions\n",
@@ -552,7 +554,7 @@
     "After logging the records to Argilla, we switch over to the UI, where we can find the newly logged examples in the `active_learning_tutorial` dataset.\n",
     "\n",
     "To only show the examples that are still missing an annotation, you can select **\"Default\"** in the **Status** filter as shown in the screenshot below.\n",
-    "After annotating a few examples you can press the **Refresh** button in the left side bar, to update the view with respect to the filters.\n",
+    "After annotating a few examples you can press the **Refresh** button in the left sidebar, to update the view with respect to the filters.\n",
     "\n",
     "Once you are done annotating the examples, you can continue with the active learning loop.\n",
     "If your annotations only contained one class, consider increasing the `n_instances` parameter."
@@ -570,7 +572,7 @@
    "source": [
     "###\n",
     "# YOU CAN DELETE THIS CELL IF YOU ARE DOING THE TUTORIAL HANDS-ON! DO NOT EXECUTE IT!\n",
-    "# It is only here, so that it passes our test suite!\n",
+    "# It is only here so that it passes our test suite!\n",
     "for i, record in enumerate(records):\n",
     "    record.annotation = \"HAM\" if i % 2 == 0 else \"SPAM\"\n",
     "rg.log(records, name=\"active_learning_tutorial\")\n",
@@ -598,13 +600,13 @@
     "# Load the annotated records into a pandas DataFrame\n",
     "records_df = rg.load(\"active_learning_tutorial\", ids=query_idx.tolist()).to_pandas()\n",
     "\n",
-    "# check if all examples were annotated\n",
+    "# Check if all examples were annotated\n",
     "if any(records_df.annotation.isna()):\n",
     "    raise UserWarning(\n",
     "        \"Please annotate first all your samples before teaching the model\"\n",
     "    )\n",
     "\n",
-    "# train the classifier with the newly annotated examples\n",
+    "# Train the classifier with the newly annotated examples\n",
     "y_train = records_df.annotation.map(lambda x: int(x == \"SPAM\"))\n",
     "learner.teach(X=X_train[query_idx], y=y_train.to_list())\n",
     "\n",
@@ -694,7 +696,7 @@
     "random_samples = 50\n",
     "\n",
     "\n",
-    "# max uncertainty strategy\n",
+    "# Max uncertainty strategy\n",
     "accuracies_max = []\n",
     "for i in range(random_samples):\n",
     "    train_rnd_df = train_df  # .sample(frac=1)\n",
@@ -712,7 +714,7 @@
     "        accuracies.append(learner.score(X=X_rnd_test, y=test_rnd_df.CLASS))\n",
     "    accuracies_max.append(accuracies)\n",
     "\n",
-    "# random strategy\n",
+    "# Random strategy\n",
     "accuracies_rnd = []\n",
     "for i in range(random_samples):\n",
     "    accuracies, learner = [], ActiveLearner(estimator=MultinomialNB())\n",
