--- a/docs/_source/tutorials/notebooks/training-textclassification-setfit-sentiment.ipynb
+++ b/docs/_source/tutorials/notebooks/training-textclassification-setfit-sentiment.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "This tutorial will show you how to fine-tune a sentiment classifier for your own domain, starting with no labeled data.\n",
     "\n",
-    "Most online tutorials about fine-tuning models assume you already have a training dataset. You'll find many tutorials for fine-tuning a pre-trained model with widely-used datasets, such as IMDB for sentiment analysis. \n",
+    "Most online tutorials about fine-tuning models assume you already have a training dataset. You'll find many tutorials for fine-tuning a pre-trained model with widely used datasets, such as IMDB for sentiment analysis. \n",
     "\n",
     "However, often **what you want is to fine-tune a model for your use case**. It's well-known that NLP model performance usually degrades with \"out-of-domain\" data. For example, a sentiment classifier pre-trained on movie reviews (e.g., IMDB) will not perform very well with customer requests.\n",
     "\n",
@@ -56,7 +56,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -109,9 +109,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -485,7 +487,7 @@
    "id": "449b659e-ebd4-4488-8f7f-7848e02fe09a",
    "metadata": {},
    "source": [
-    "Here we are using the simplest approach for training our SetFit model. Since it [integrates with Optuna](https://github.com/huggingface/setfit/blob/main/notebooks/text-classification_hyperparameter-search.ipynb), you could use hyperparameter tuning to find the best hyperparamaters for training your model. However, it is better to start with a simple baseline, validate the model for your use case and iterate on the data before focusing on model experimentation and tuning."
+    "Here we are using the simplest approach for training our SetFit model. Since it [integrates with Optuna](https://github.com/huggingface/setfit/blob/main/notebooks/text-classification_hyperparameter-search.ipynb), you could use hyperparameter tuning to find the best hyperparameter for training your model. However, it is better to start with a simple baseline, validate the model for your use case and iterate on the data before focusing on model experimentation and tuning."
    ]
   },
   {
@@ -503,7 +505,7 @@
     "\n",
     "If you are interested in SetFit, you can check our other SetFit + Argilla tutorials:\n",
     "\n",
-    "- [Zero-shot and few-shot classification with SetFit](labelling-textclassification_setfit_zeroshot.ipynb)\n",
+    "- [Zero-shot and few-shot classification with SetFit](/tutorials/notebooks/labelling-textclassification-setfit-zeroshot.html)\n",
     "- [Few-shot classification with SetFit](training-textclassification-setfit-fewshot.ipynb)\n",
     "\n",
     "Or check out the [SetFit repository on GitHub](https://github.com/huggingface/setfit).\n",
