--- a/docs/_source/tutorials/notebooks/training-textclassification-transformers-pretrained.ipynb
+++ b/docs/_source/tutorials/notebooks/training-textclassification-transformers-pretrained.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "This tutorial will show you how to fine-tune a sentiment classifier for your own domain, starting with no labeled data.\n",
     "\n",
-    "Most online tutorials about fine-tuning models assume you already have a training dataset. You'll find many tutorials for fine-tuning a pre-trained model with widely-used datasets, such as IMDB for sentiment analysis. \n",
+    "Most online tutorials about fine-tuning models assume you already have a training dataset. You'll find many tutorials for fine-tuning a pre-trained model with widely used datasets, such as IMDB for sentiment analysis. \n",
     "\n",
     "However, very often **what you want is to fine-tune a model for your use case**. It's well-known that NLP model performance usually degrades with \"out-of-domain\" data. For example, a sentiment classifier pre-trained on movie reviews (e.g., IMDB) will not perform very well with customer requests.\n",
     "\n",
@@ -64,7 +64,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -117,9 +117,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -180,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "banking_ds = load_dataset(\"banking77\")\n",
+    "banking_ds = load_dataset(\"PolyAI/banking77\")\n",
     "\n",
     "to_label1, to_label2 = (\n",
     "    banking_ds[\"train\"].train_test_split(test_size=0.5, seed=42).values()\n",
@@ -227,7 +229,7 @@
     "sentiment_classifier = pipeline(\n",
     "    model=\"distilbert-base-uncased-finetuned-sst-2-english\",\n",
     "    task=\"sentiment-analysis\",\n",
-    "    return_all_scores=True,\n",
+    "    top_k=None,\n",
     ")\n",
     "\n",
     "to_label1[3][\"text\"], sentiment_classifier(to_label1[3][\"text\"])"
@@ -252,7 +254,7 @@
     "\n",
     "For this tutorial, we'll use the **original labeling scheme** defined by the pre-trained model which is composed of two labels: `POSITIVE` and `NEGATIVE`. We could have added the `NEUTRAL` label, but let's keep it simple. \n",
     "\n",
-    "Another important issue when approaching a data annotation project are the **annotation guidelines**, which explain how to assign the labels to specific examples. As we'll see later, the messages we'll be labeling are mostly questions with a neutral sentiment, which we'll label with the `POSITIVE` label, and some other are negative questions which we'll label with the `NEGATIVE` label. Later on, we'll show some examples of each label.\n",
+    "Another important issue when approaching a data annotation project is the **annotation guidelines**, which explain how to assign the labels to specific examples. As we'll see later, the messages we'll be labeling are mostly questions with a neutral sentiment, which we'll label with the `POSITIVE` label, and some others are negative questions which we'll label with the `NEGATIVE` label. Later on, we'll show some examples of each label.\n",
     "\n"
    ]
   },
@@ -286,7 +288,7 @@
     "def predict(examples):\n",
     "    return {\"predictions\": sentiment_classifier(examples[\"text\"], truncation=True)}\n",
     "\n",
-    "# add .select(range(10)) before map if you just want to test this quickly with 10 examples\n",
+    "# Add .select(range(10)) before map if you just want to test this quickly with 10 examples\n",
     "to_label1 = to_label1.map(predict, batched=True, batch_size=4)"
    ]
   },
@@ -310,9 +312,9 @@
    "id": "2aa97a9b-fbad-49b7-98bc-b13d1a1648cb",
    "metadata": {},
    "source": [
-    "### Build and log dataset\n",
+    "### Build and log the dataset\n",
     "\n",
-    "The following code builds a list of Argilla records with the predictions and log the records to Argilla to label our first training set."
+    "The following code builds a list of Argilla records with the predictions and logs the records to Argilla to label our first training set."
    ]
   },
   {
@@ -328,7 +330,7 @@
     "        text=example[\"text\"],\n",
     "        metadata={\n",
     "            \"category\": example[\"label\"]\n",
-    "        },  # log the intents for exploration of specific intents\n",
+    "        },  # Log the intents for exploration of specific intents\n",
     "        prediction=[(pred[\"label\"], pred[\"score\"]) for pred in example[\"predictions\"]],\n",
     "        prediction_agent=\"distilbert-base-uncased-finetuned-sst-2-english\",\n",
     "    )\n",
@@ -342,7 +344,7 @@
    "id": "5dc4a080-a8e0-4ccb-9252-a32af4849470",
    "metadata": {},
    "source": [
-    "## 2. Explore and label data with the pretrained model\n",
+    "## 2. Explore and label data with the pre-trained model\n",
     "\n",
     "In this step, we'll start by exploring how the pre-trained model is performing with our dataset. \n",
     "\n",
@@ -355,7 +357,7 @@
     "\n",
     "Taking into account this analysis, we can start labeling our data. \n",
     "\n",
-    "Argilla provides you with a search-driven UI to annotated data, using **free-text search**, **search filters** and **the Elasticsearch query DSL** for advanced queries. This is especially useful for sparse datasets, tasks with a high number of labels, or unbalanced classes. In the standard case, we recommend you to follow the workflow below:\n",
+    "Argilla provides you with a search-driven UI to annotate data, using **free-text search**, **search filters** and **the Elasticsearch query DSL** for advanced queries. This is especially useful for sparse datasets, tasks with a high number of labels, or unbalanced classes. In the standard case, we recommend you to follow the workflow below:\n",
     "\n",
     "1. **Start labeling examples sequentially**, without using search features. This way you will annotate a fraction of your data which will be aligned with the dataset distribution.\n",
     "\n",
@@ -543,10 +545,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create 🤗 dataset with labels as numeric ids\n",
+    "# Create 🤗 dataset with labels as numeric ids\n",
     "train_ds = rb_dataset.prepare_for_training()\n",
     "\n",
-    "# tokenize our datasets\n",
+    "# Tokenize our datasets\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
     "    \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
     ")\n",
@@ -556,7 +558,7 @@
     "\n",
     "tokenized_train_ds = train_ds.map(tokenize_function, batched=True)\n",
     "\n",
-    "# split the data into a training and evaluation set\n",
+    "# Split the data into a training and evaluation set\n",
     "train_dataset, eval_dataset = tokenized_train_ds.train_test_split(\n",
     "    test_size=0.2, seed=42\n",
     ").values()"
@@ -831,7 +833,7 @@
     "\n",
     "In this tutorial, you learned how to build a training set from scratch with the help of a pre-trained model, performing two iterations of `predict` > `log` > `label`. \n",
     "\n",
-    "Although this is somehow a toy example, you will be able to apply this workflow to your own projects to adapt existing models or building them from scratch. \n",
+    "Although this is somehow a toy example, you will be able to apply this workflow to your own projects to adapt existing models or build them from scratch. \n",
     "\n",
     "In this tutorial, we've covered one way of building training sets: **hand labeling**. If you are interested in other methods, which could be combined with hand labeling, checkout the following:\n",
     "\n",
