--- a/docs/_source/tutorials/notebooks/training-textgeneration-unstructured.ipynb
+++ b/docs/_source/tutorials/notebooks/training-textgeneration-unstructured.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# 🕸️ Train a summarization model with Unstructured and Transformers\n",
     "\n",
-    "In this notebook, we'll show you how you can use the amazing library [unstructured](https://github.com/Unstructured-IO/unstructured) together with [argilla](https://github.com/argilla-io/argilla), and HuggingFace [transformers](https://github.com/huggingface/transformers) to train a custom summarization model. In this case, we're going to build a summarization model targeted at summarizing the [Institute for the Study of War's](https://www.understandingwar.org/) daily reports on the war in Ukraine. You can see an example of one of the reports [here](https://www.understandingwar.org/backgrounder/russian-offensive-campaign-assessment-december-12), and a screen shot appears below.\n",
+    "In this notebook, we'll show you how you can use the amazing library [unstructured](https://github.com/Unstructured-IO/unstructured) together with [argilla](https://github.com/argilla-io/argilla), and HuggingFace [transformers](https://github.com/huggingface/transformers) to train a custom summarization model. In this case, we're going to build a summarization model targeted at summarizing the [Institute for the Study of War's](https://www.understandingwar.org/) daily reports on the war in Ukraine. You can see an example of one of the reports [here](https://www.understandingwar.org/backgrounder/russian-offensive-campaign-assessment-december-12), and a screenshot appears below.\n",
     "\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
@@ -60,7 +60,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -71,7 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install \"unstructured==0.4.4\" -qqq"
+    "%pip install argilla\n",
+    "%pip install \"unstructured==0.4.4\" -qqq\n",
+    "%pip install transformers datasets"
    ]
   },
   {
@@ -113,9 +115,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -151,7 +155,8 @@
     "from unstructured.staging.argilla import stage_for_argilla\n",
     "\n",
     "import nltk\n",
-    "nltk.download('averaged_perceptron_tagger')"
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('punkt')"
    ]
   },
   {
@@ -167,7 +172,7 @@
    "id": "14ef78ea",
    "metadata": {},
    "source": [
-    "First, we'll pull our documents from the ISW website. We'll use the built-in Python `datetime` and `calendar` libraries to iterate over the dates for the reports we want to pull and fine the associated URLs."
+    "First, we'll pull our documents from the ISW website. We'll use the built-in Python `datetime` and `calendar` libraries to iterate over the dates for the reports we want to pull and find the associated URLs."
    ]
   },
   {
@@ -230,7 +235,7 @@
    "id": "d2cd324b",
    "metadata": {},
    "source": [
-    "After partitioning the document, we'll extract the `Key Takeaways` section from the ISW reports, which is shown in the screenshot below. The `Key Takeaways` section will serve as the target text for our summarization model. While it would be time consuming the write HTML parsing code to find this content, with the `unstructured` library it is easy. Since the `partition_html` function breaks down the elements of the document into different categories like `Title`, `NarrativeText`, and `ListItem`, all we need to do is find the `Key Takeaways` title and then grab `ListItem` elements until the list ends. This logic is implemented in the `get_key_takeaways` function.\n",
+    "After partitioning the document, we'll extract the `Key Takeaways` section from the ISW reports, which is shown in the screenshot below. The `Key Takeaways` section will serve as the target text for our summarization model. While it would be time-consuming the write HTML parsing code to find this content, with the `unstructured` library it is easy. Since the `partition_html` function breaks down the elements of the document into different categories like `Title`, `NarrativeText`, and `ListItem`, all we need to do is find the `Key Takeaways` title and then grab `ListItem` elements until the list ends. This logic is implemented in the `get_key_takeaways` function.\n",
     "\n",
     "<img src=\"../../_static/tutorials/training-textgeneration-unstructured/isw-key-takeaways.png\" width=500 />"
    ]
@@ -295,7 +300,7 @@
    "id": "17aa2396",
    "metadata": {},
    "source": [
-    "Next we'll grab the narrative text from the document as input for our model. Again, this is easy with `unstructured` because the `partition_html` function already splits out the text. We'll just grab all of the `NarrativeText` elements that exceed a minimum length threshold. While we're in there, we'll also clean out the raw text for citations within the document, which isn't natural language and could impact the quality of our summarization model."
+    "Next, we'll grab the narrative text from the document as input for our model. Again, this is easy with `unstructured` because the `partition_html` function already splits out the text. We'll just grab all of the `NarrativeText` elements that exceed a minimum length threshold. While we're in there, we'll also clean out the raw text for citations within the document, which isn't natural language and could impact the quality of our summarization model."
    ]
   },
   {
@@ -335,7 +340,7 @@
     }
    ],
    "source": [
-    "# show a sample of narrative text\n",
+    "# Show a sample of narrative text\n",
     "print(get_narrative(elements).text[0:2000])"
    ]
   },
@@ -591,7 +596,7 @@
    "source": [
     "## Section 3: Model Training with `transformers` <a id=\"training\"></a>\n",
     "\n",
-    "After refining our traning data in Argilla, we're ready to fine-tune our model using the `transformers` library. Luckily, `argilla` has a utility for converting datasets to a `dataset.Dataset`, which is the format required by the `transformers` `Trainer` object. In this example, we'll train a `t5-small` model to keep the runtime for the notebook reasonable. You can play around with larger models to get higher quality results."
+    "After refining our traning data in Argilla, we're ready to fine-tune our model using the `transformers` library. Luckily, `argilla` has a utility for converting datasets to a `dataset.Dataset`, which is the format required by the `transformers` `Trainer` object. In this example, we'll train a `t5-small` model to keep the runtime for the notebook reasonable. You can play around with larger models to get higher-quality results."
    ]
   },
   {
@@ -640,7 +645,7 @@
     "    inputs = [doc for doc in examples[\"text\"]]\n",
     "    model_inputs = tokenizer(inputs, max_length=max_input_length, truncation=True)\n",
     "\n",
-    "    # Setup the tokenizer for targets\n",
+    "    # Set up the tokenizer for targets\n",
     "    with tokenizer.as_target_tokenizer():\n",
     "        labels = tokenizer(examples[\"annotation\"], max_length=max_target_length, truncation=True)\n",
     "\n",
