--- a/docs/_source/tutorials/notebooks/monitoring-textclassification-shaptransformersinterpret-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/monitoring-textclassification-shaptransformersinterpret-explainability.ipynb
@@ -6,9 +6,9 @@
    "id": "cb4af95f-9940-4e8c-832f-446f6b2d50c5",
    "metadata": {},
    "source": [
-    "# 🕵️‍♀️ Analize predictions with explainability methods \n",
+    "# 🕵️‍♀️ Analyze predictions with explainability methods \n",
     "\n",
-    "In this tutorial you will learn to log and explore NLP model explanations using Transformers and the following Libraries\n",
+    "In this tutorial, you will learn to log and explore NLP model explanations using Transformers and the following Libraries\n",
     "\n",
     "* Transformers Interpret\n",
     "* Shap\n",
@@ -54,7 +54,7 @@
     "This tutorial is a Jupyter Notebook. There are two options to run it:\n",
     "\n",
     "- Use the Open in Colab button at the top of this page. This option allows you to run the notebook directly on Google Colab. Don't forget to change the runtime type to GPU for faster model training and inference.\n",
-    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter notebook tool of your choice.\n",
+    "- Download the .ipynb file by clicking on the View source link at the top of the page. This option allows you to download the notebook and run it on your local machine or on a Jupyter Notebook tool of your choice.\n",
     "</div>"
    ]
   },
@@ -88,11 +88,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1459fdf",
+   "cell_type": "markdown",
+   "id": "8952fab4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "If you are running Argilla using the Docker quickstart image or Hugging Face Spaces, you need to init the Argilla client with the `URL` and `API_KEY`:"
    ]
@@ -106,9 +104,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -201,7 +201,7 @@
     "model_name = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "\n",
-    "# use gpu if available\n",
+    "# Use gpu if available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)\n",
     "\n",
@@ -210,7 +210,7 @@
     "# Define the explainer using transformers_interpret\n",
     "cls_explainer = SequenceClassificationExplainer(model, tokenizer)\n",
     "\n",
-    "# remove overlapping ##tokens\n",
+    "# Remove overlapping ##tokens\n",
     "def merge_word_attributions(word_attributions):\n",
     "    sentence =[]\n",
     "    i = 0\n",
@@ -235,7 +235,7 @@
     "    token_attributions = [\n",
     "        TokenAttributions(\n",
     "            token=token, attributions={cls_explainer.predicted_class_name: score}\n",
-    "        )  # ignore first (CLS) and last (SEP) tokens\n",
+    "        )  # Ignore first (CLS) and last (SEP) tokens\n",
     "        for token, score in word_attributions[1:-1]\n",
     "    ]\n",
     "    # Build Text classification records\n",
@@ -294,7 +294,7 @@
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "\n",
     "\n",
-    "# use gpu if available\n",
+    "# Use gpu if available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model.to(device)\n",
     "\n",
@@ -320,11 +320,11 @@
     "predictions = pipeline(sst[\"sentence\"])\n",
     "\n",
     "for i in range(0, len(shap_values.values)):\n",
-    "    # Scale shap values betweeen -1 and 1 (using e.g., scikit-learn MinMaxScaler\n",
+    "    # Scale shap values between -1 and 1 (using e.g., scikit-learn MinMaxScaler\n",
     "    scaled = scaler.fit_transform(shap_values.values[i])\n",
     "\n",
-    "    # get prediction label idx for indexing attributions and shap_values\n",
-    "    # sorts by score to get the max score prediction\n",
+    "    # Get prediction label idx for indexing attributions and shap_values\n",
+    "    # Sort by score to get the max score prediction\n",
     "    sorted_predictions = sorted(predictions[i], key=lambda d: d[\"score\"], reverse=True)\n",
     "    label_idx = 0 if sorted_predictions[0][\"label\"] == \"NEGATIVE\" else 1\n",
     "\n",
@@ -335,7 +335,7 @@
     "        )\n",
     "        for token, score in zip(shap_values.data[i], [row[label_idx] for row in scaled])\n",
     "    ]\n",
-    "    # build annotation label\n",
+    "    # Build annotation label\n",
     "    annotation = \"POSITIVE\" if sst[\"label\"][i] == 1 else \"NEGATIVE\"\n",
     "\n",
     "    # Build Argilla record\n",
@@ -345,7 +345,7 @@
     "        annotation=label,\n",
     "        explanation={\"text\": token_attributions},\n",
     "    )\n",
-    "    # add record\n",
+    "    # Add record\n",
     "    records.append(record)\n",
     "# Log records\n",
     "rg.log(records, name=\"argilla_shap_example\")"
